# fastapi-serverless

./: .gitignore  LICENSE  README.md  pyproject.toml
fastapi_serverless/: app.py  database.py
fastapi_serverless/models/: api.py
fastapi_serverless/routers/: authors.py  books.py  genres.py
sam/: template.yaml
scripts/: deploy_TEMPLATE.sh  make_layer.sh
tests/: test_authors.py
