[tool.poetry]
name = "fastapi-serverless"
version = "0.1.0"
description = "FastAPI Serverless example"
authors = ["Ville Kärkkäinen <ville.karkkainen@nordhero.com>"]

[tool.poetry.dependencies]
python = "3.9.7"
fastapi = "0.72.0"
mangum = "0.12.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
uvicorn = "^0.17.0"
black = {version = "^21.12b0", allow-prereleases = true}
flake8 = "^4.0.1"
requests = "^2.27.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
